# invoice-parser

./: .config  .env.example  .gitignore  README.md  main.py  pyproject.toml  schema.json
src/: __init__.py  config.py  output_format.py  state.py  system_message.py  utility.py  workflow.py
src/nodes/: __init__.py  image_to_text.py  messages.py  page_aggregator.py  page_formator.py  page_groupper.py  pdf_2_image.py  pdfium_pdf_2_img.py  poppler_pdf_2_img.py
